--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -756,7 +756,7 @@ We will assume that initially no routes are set. This means that either a contro
 \end{figure}
 
 \subsection*{Scenario Behaviour}
-We shall now describe the behaviour of trains and their interaction with the ERTMS system as they negotiate their way through the double junction. The UML message sequence chart (See Fig \ref{fig:seqChart}) shall complement this description by describing the communication sequence for the movement of the first two trains. Firstly the radio block processor, which is executing the timetable, makes a request to the interlocking to set the route from $D \to C$. Since this is currently safe the interlocking will grant the route assignment. Next the RBC sets the points, via the interlocking and track-side infrastructure, and the points respond with an acknowledgement indicating that they have been set. The RBC then grants a movement authority to the train which allows it to move from $D \to C$ which the train acknowledges. Then train $1$ then moves from $D \to C$, whilst continually transmitting its position to the RBC. Once this movement authority has been granted the RBC can then negotiate and grant another movement authority for train $2$ to move from $A \to B$ as its path does not cross that of train $1$. Once train $2$ has passed the second point on its journey  from $A \to B$ and train $1$ has exited at $C$ , the RBC can negotiate and grant a movement authority for train $3$ to move from $F \to C$.
+We shall now describe the behaviour of trains and their interaction with the ERTMS system as they negotiate their way through the double junction. The UML message sequence chart (See Fig \ref{fig:SeqChart}) shall complement this description by describing the communication sequence for the movement of the first two trains. Firstly the radio block processor, which is executing the timetable, makes a request to the interlocking to set the route from $D \to C$. Since this is currently safe the interlocking will grant the route assignment. Next the RBC sets the points, via the interlocking and track-side infrastructure, and the points respond with an acknowledgement indicating that they have been set. The RBC then grants a movement authority to the train which allows it to move from $D \to C$ which the train acknowledges. Then train $1$ then moves from $D \to C$, whilst continually transmitting its position to the RBC. Once this movement authority has been granted the RBC can then negotiate and grant another movement authority for train $2$ to move from $A \to B$ as its path does not cross that of train $1$. Once train $2$ has passed the second point on its journey  from $A \to B$ and train $1$ has exited at $C$ , the RBC can negotiate and grant a movement authority for train $3$ to move from $F \to C$.
 \begin{figure} [h!]
 
 \begin{center}
