--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -91,7 +91,7 @@ Further instances of an electrical system replacing a mechanical one occurred in
 Electronic \textbf{control panels}, which contained switches and buttons, replaced the mechanical levers and removed the remaining physical effort needed to operate signalling systems. The combination of track circuits, electronic points and control panels enabled the introduction of \textbf{route setting} whereby at the press of a single button a configuration of signals and points could be selected thus enabling a train to travel down a particular route along the track.
 
 The next major advancement came some 50 years later and was enabled by the development of microprocessors. The relays and mechanical interlockings were replaced with \textbf{solid state interlockings} which were smaller still and more reliable than relay interlockings.
-These solid state interlockings are one of the systems verified later on in chapter \ref{chapter:dpllapp}. Jump forward another 30 years to the current day and we are seeing the development and deployment of a new type of control system which makes use of recent technologies such as GPS and GMS radio  communications that enable signallers to have a far finer grain of control when compared with the discrete track circuits and do not need the physical coloured light signals to function. One such instance of a control system is the European Rail Traffic Management System which is discussed in more detail in Chapter \ref{chapter:ERTMS}
+These solid state interlockings are one of the systems verified in Chapter \ref{sec:executionofxsat}. Jump forward another 30 years to the current day and we are seeing the development and deployment of a new type of control system which makes use of recent technologies such as GPS and GMS radio  communications that enable signallers to have a far finer grain of control when compared with the discrete track circuits and do not need the physical coloured light signals to function. One such instance of a control system is the European Rail Traffic Management System which is discussed in more detail in Chapter \ref{chapter:ERTMS}
 \begin{comment}
 In the 1920s \textbf{colour light signals} replaced mechanical semaphore signals these where much brighter than the oil
 lamps fitted to semaphores and greatly increased the safety of night time
