--- a/Maude.tex
+++ b/Maude.tex
@@ -331,7 +331,7 @@ The following are some states reachable in time 2.
 In the following we shall give an overview of the specifications used to model the ERTMS system. We have used the Real Time Maude system in an object oriented fashion following the hybrid automata described in chapter \ref{chap:hybrid} to define one class for each of the three hybrid automata. Time has been modelled by the use of a function $\mathrm{delta}$ that distributes the transition of time over objects in the system. Rewriting rules are then applied to $\mathrm{delta}$ containing singleton objects to give each individual object its behaviour. We attempt to remove as much non-determinism from the model as possible by forcing the ERTMS system to read all messages by the end of each time step and by preventing trains from making more than one movement authority request to the radio block processor in a given time step.
 
 
-\subsubsection*{Modelling the Transition of Time}
+\subsubsection*{Modelling the Transition of Time} \label{sec:maudetimemodelling}
 In our previous Real Time Maude specifications we have had rewrite rules that work on a specific object or state and increment time for the whole system. This presents a problem as we could have two objects that can both increment the time of the global system independently.  Since we are modelling a real life system all of the subsystems much be subjected to time in an equal manner. We need a way of incrementing the time of the whole global system and then distributing this increment of time amongst the objects of the system. To solve this problem we define an operator $\texttt{delta}$ which describes how a distributed system evolves with time.
 
 \begin{lstlisting}[caption = The delta time transition operation, label = code:delta]
@@ -344,7 +344,7 @@ rl [timetrans] : {OCREST} => {delta(OCREST)} in time 1 .
 rl [delta1] : delta(CON1 CON2) => delta(CON1)delta(CON2) .
 \end{lstlisting}
 
-The operation \texttt{nondelta} is frozen meaning that the configuration contained within will not be evaluated by the Real Time Maude system until the $\texttt{delta}$ operation has been evaluated. We only allow for time to be incremented on a global system containing an object configuration which cannot by definition contain any messages. This forces all messages sent in one time interval to be read during that interval. The delta1 rule distributes the delta operation over the constituent objects of a configuration until there are many deltas applied to configurations containing singleton objects. Each of these singleton objects has its own separately defined behaviour for the delta operation that captures that transition of time for that object. This was inspired by  \cite{PO07} where a delta operation is used to distribute time over a distributed sensor network. The \texttt{nondelta} operation is applied to objects to prevent the lapse of time by causing the object to have the sort \texttt{Configuration} instead of \texttt{ObjectConfiguration}.
+The operation \texttt{delta} is frozen meaning that the configuration contained within will not be evaluated by the Real Time Maude system until the $\texttt{delta}$ operation has been evaluated. We only allow for time to be incremented on a global system containing an object configuration which cannot by definition contain any messages. This forces all messages sent in one time interval to be read during that interval. The delta1 rule distributes the delta operation over the constituent objects of a configuration until there are many deltas applied to configurations containing singleton objects. Each of these singleton objects has its own separately defined behaviour for the delta operation that captures that transition of time for that object. This was inspired by  \cite{PO07} where a delta operation is used to distribute time over a distributed sensor network. The \texttt{nondelta} operation is applied to objects to prevent the lapse of time by causing the object to have the sort \texttt{Configuration} instead of \texttt{ObjectConfiguration}. We use this in our Maude formulation of the RBC to prevent time elapsing until the RBC has responded to a movement authority request.
 
 \subsubsection*{Modelling Trains}
 We shall now describe the specification of trains. We define the Train class to have a state which like our hybrid automaton can be in one of four possibilities: constant speed, accelerating, stopped and braking. As well as the state it also has six fields of sort Nat representing the distance, speed, acceleration, movement authority,  current track segment and maximum speed.
