--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -545,7 +545,7 @@ proof. Lemmas invoked during the proof are extracted separately and
 called as procedures. Since the proof is by general induction along a
 measure, the main body of the program is using general recursion along
 the same measure.
-\subsection*{Execution of XSAT}
+\subsection*{Execution of XSAT} \label{sec:executionofxsat}
 In the following we will see how both $\forall$ and $\forallnc$  variants of the XSAT solver 
 behave when they are applied to a number of SAT problems. The extracted 
 decision procedure was run on several instances of the pigeon hole 
