--- a/Hybridautomata.tex
+++ b/Hybridautomata.tex
@@ -265,27 +265,27 @@ We define a hybrid automaton $H_{T}$ as follows:
 \tikzstyle{biarrow}=[<->,very thick,shorten >=7pt,shorten <=7pt]
 
 
-\node (A) [box1]  at (0,0)                  {\textbf{Stop (EoA)} \\
+\node (A) [box1]  at (0,0)                  {{\large \textbf{Stop (EoA)}} \\
 							$S = 0$ \\
                                                         $\dot{S} = 0$
 							$D = EoA$ 
 
                                             };
 
-\node (B) [box1]    at (7.5,0)          { \textbf{Accelerating} \\
+\node (B) [box1]    at (7.5,0)          {{\large \!\!\!\!\textbf{Accelerating}} \\
        $\dot{S} = 1$
        $\BD{S} \leq \DMA{D}{EoA}$
        $S \leq MaxSpeed$
 
 };
 
-\node (C)[box1] at (0, 7.5)  { \textbf{Braking}\\
+\node (C)[box1] at (0, 7.5)  {{\large \textbf{Braking}}\\
 					                   $\dot{S} = -1$ 
 						           $\BD{S} = \DMA{D}{EoA}$
                                                
 						};
 
-\node (D)[box1] at (7.5, 7.5)  {   \textbf{Full Speed }\\
+\node (D)[box1] at (7.5, 7.5)  { {\large \textbf{Full Speed }} \\
 					                   $S = MaxSpeed$
                                                             $\dot{S} = 0$
 							    $\BD{S} \leq \DMA{D}{EoA}$
@@ -611,14 +611,14 @@ We define a live transition system (LTS,A) to consist of a labelled transition s
 All transitions of a timed transition system $S^t_H$ have an associated \emph{duration} $\delta \in R_{\geq 0}$. Every event $\sigma \in \Sigma$ the transition $q \xrightarrow{\sigma} q'$ has a duration of 0. For all transitions $q \xrightarrow{\delta} q'$ where $\delta \in R_{\geq 0}$ the duration is $\delta$.  We define an infinite trajectory $\langle a_i, q_i \rangle_{i \geq 1}$ of a transition system $S^t_H$ to be \emph{divergent} if the sum of the transitions $\Sigma_{i \geq 1} \delta$ is \emph{divergent}. For the set of divergent initialized trajectories $L^t_H$ of the timed transition system $S^t_H$, the hybrid automaton $H$ is \emph{non-Zeno} if $L^t_H$ is machined-closed for $S^t_H$.
  \end{mydef}
 
-The automaton is \emph{non-Zeno} if for every possible state of the system reachable from the initial state by some finite trajectory that finite trajectory is the prefix of some infinite trajectory of the system.
+In other words automaton is \emph{non-Zeno} if for every possible state of the system reachable from the initial state by some finite trajectory that finite trajectory is the prefix of some infinite trajectory of the system that diverges in time. This means for instance that the system cannot alternate between two modes where the time between transitions infinitely decrease e.g. $\frac{1}{2},\frac{1}{4},\frac{1}{8}$.
 
 \section{Automaton Validation}
 In the following we prove that the train automaton is non-Zeno i.e. that time can progress in every state of the system. We check that the automaton remains inside the regions defined by its invariants and does not become stuck on the edge of a region. This is important for verification purposes as simulations and model checking algorithms require the system to be live so that time can progress. In each of the proofs we perform a case by case argument for each control mode of the automaton. The proofs for the interlocking and radio block processor  automata are trivial since they do not contain any flow conditions or invariants and therefore it is not possible for the automata to enter a state in while time cannot progress.
 \medskip
 
 \begin{mytheorem}[Train Automaton is Non-Zeno]
-The hybrid automaton  $H_{T}$ is non-Zeno i.e. every finite initialised trajectory in the $LTS$ defined by the automaton has an infinite trajectory of which it is a prefix.
+The hybrid automaton  $H_{T}$ is non-Zeno i.e. every finite initialised trajectory in the $LTS$ defined by the automaton has an infinite trajectory, of which it is a prefix, in the set of divergent initialized trajectories in the automaton.
 \begin{proof}
 Given a finite initialized trajectory, we perform a case distinction on the current case, i.e. the last state in the trajectory.
 \begin{description}
@@ -632,7 +632,7 @@ Given a finite initialized trajectory, we perform a case distinction on the curr
 The case for the $Full \, Speed$ state follows the same argument as the Accelerating state except for the part relating to the invariant $S \leq MaxSpeed$.
 
 \item[Case: Braking]
-The invariant $0 \leq S$ is the only invariant to bound the decrease of the speed in the Braking state. When the speed of  the automaton reaches zero, time can no longer progress in this state and the automaton is forced to perform a control mode jump to the stopped state. It is not possible for the automaton to alternate between braking and accelerating. The only way the automaton can go to accelerating is when it receives a new movement authority in which case  BD < DMA is invariant and the train will accelerate. Once the automaton starts braking BD = DMA becomes invariant and it is not possible for it to return to the accelerating state without receiving a new movement authority. It is therefore non-zeno as time will progress in the braking state until the automaton receives a new movement authority and changes state or the automaton stops.
+The invariant $0 \leq S$ is the only invariant to bound the decrease of the speed in the Braking state. When the speed of  the automaton reaches zero, time can no longer progress in this state and the automaton is forced to perform a control mode jump to the stopped state. It is not possible for the automaton to alternate between braking and accelerating. The only way the automaton can go to accelerating is when it receives a new movement authority, which is of a fixed size, in which case  $BD < DMA$ is invariant and the train will accelerate. Once the automaton starts braking $BD = DMA$ becomes invariant and it is not possible for it to return to the accelerating state without receiving a new movement authority. It is therefore non-zeno as time will progress in the braking state until the automaton receives a new movement authority and changes state or the automaton stops.
 \end{description}
 \end{proof}
 \end{mytheorem}
