--- a/lit.bib
+++ b/lit.bib
@@ -848,7 +848,7 @@
 }
 
 @INCOLLECTION{GG69,
-  author = {Gerhard Gentzen},
+  author = {Gentzen, G.},
   title = {Investigations into Logical Deduction},
   booktitle = {Collected Papers of Gerhard Gentzen},
   publisher = {Elsevier},
@@ -1007,7 +1007,7 @@
 }
 
 @PHDTHESIS{PhilPhD,
-  author = {Phillip James},
+  author = {James, P.},
   title = {Designing domain specific lanaguages for verification and applications
 	to the railway domain},
   school = {Swansea University},
@@ -1060,7 +1060,7 @@
 }
 
 @PHDTHESIS{KarimPhD,
-  author = {Kanso},
+  author = {Kanso, K.},
   title = {Agda as a Platform for the Development of Verified Railway Interlocking
 	Systems},
   school = {Department of Computer Science, Swansea University},
@@ -1294,7 +1294,7 @@
 }
 
 @ARTICLE{FM10b,
-  author = {Filip Mari{\'c}},
+  author = {Mari{\'c}, F.},
   title = {Formal verification of a modern {SAT} solver by shallow embedding
 	into {I}sabelle/{HOL}},
   journal = {Theoretical {C}omputer {S}cience},
@@ -1328,7 +1328,7 @@
 }
 
 @ARTICLE{MS99,
-  author = {Jo{\~a}o P. Marques-Silva and Karem A. Sakallah},
+  author = {Marques-Silva, J. P. and Sakallah, K. A.},
   title = {{GRASP}: {A} {S}earch {A}lgorithm for {P}ropositional {S}atisfiability},
   journal = {IEEE Trans. Computers},
   year = {1999},
@@ -1620,7 +1620,7 @@
 }
 
 @INPROCEEDINGS{JQ82,
-  author = {Queille, J. P. and Sifakis},
+  author = {Queille, J. P. and Sifakis, J.},
   title = {Specification and verification of concurrent systems in {CESAR}},
   booktitle = {International Symposium on Programming: Proceedings of the 5th Colloquium
 	Turin},
